Fix nav bar alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -19,6 +19,10 @@
     display: inline-block;
     vertical-align: middle;
   }
+  
+  ul {
+    padding: 0;
+  }
 
   li {
     display: inline;
